Modify manage-members 3

--- a/scss/manage-members.scss
+++ b/scss/manage-members.scss
@@ -30,7 +30,7 @@ header{
         overflow: hidden;
 
         tbody tr:focus {
-            background-color: yellow;
+            background-color: rgb(255, 255, 75);
         }
     }
 
