--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,113 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 70px;
 }
-body nav {
+
+nav {
   list-style-type: none;
   display: flex;
-  justify-content: space-evenly;
-  justify-items: center;
-  padding-top: 15px;
+  justify-content: space-between;
+  gap: 15px;
 }
+
 @media all and (max-width: 870px) {
-  body nav {
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
+  nav {
+    flex-wrap: wrap;
   }
 }
-body nav li {
-  background-color: rgb(173, 173, 173);
+nav li {
+  background-color: rgb(211, 211, 211);
   width: 220px;
   height: 150px;
-  border-radius: 10px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
   cursor: pointer;
 }
-body nav li:hover {
+
+nav li:hover {
   filter: drop-shadow(0 0 0.8rem rgb(20, 173, 220));
-  background-color: rgb(255, 255, 255);
 }
-body nav li a {
+
+nav li:nth-child(odd):hover::after {
+  top: 0;
+}
+
+nav li:nth-child(even):hover::after {
+  top: 0;
+}
+
+nav li:nth-child(odd)::after {
+  display: block;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -100%;
+  height: 100%;
+  background-color: rgba(20, 173, 220, 0.8);
+  transition: top 500ms;
+  color: white;
+  pointer-events: none;
+  padding: 10px;
+}
+
+nav li:nth-child(even)::after {
+  display: block;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  height: 100%;
+  background-color: rgba(20, 173, 220, 0.8);
+  transition: top 500ms;
+  color: white;
+  pointer-events: none;
+  padding: 10px;
+}
+
+nav li:nth-child(1)::after {
+  content: "Click to add, update, search or delete members";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+nav li:nth-child(2)::after {
+  content: "Click to add, update, search or delete books";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+nav li:nth-child(3)::after {
+  content: "Click to issue books to members";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+nav li:nth-child(4)::after {
+  content: "Click to handle when books are returned";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+nav li a {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,19 +117,22 @@ body nav li a {
   text-decoration: none;
   justify-content: space-around;
 }
-body nav li a:hover {
-  color: rgb(20, 173, 220);
+
+nav li a:hover {
+  color: rgba(20, 173, 220, 0.8);
 }
-body nav li a ion-icon {
+
+nav li a ion-icon {
   font-size: 5rem;
   padding-top: 20px;
 }
-body nav li a div {
+
+nav li a div {
   padding: 15px;
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
@@ -58,14 +141,11 @@ footer {
   border-top: 1px solid lightgray;
   font-size: 0.9rem;
 }
+
 footer a {
   text-decoration: none;
 }
-@media all and (max-width: 870px) {
-  footer {
-    margin-top: 10px;
-    position: relative;
-  }
-}
+
+/*# sourceMappingURL=index.css.map */
 
 /*# sourceMappingURL=index.css.map */
