--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,67 +1,143 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
-body{
-// background-color: yellow;
-font-family: 'Ubuntu', sans-serif;
+html{
+    height: 100%;
+}
 
-    nav{
-        list-style-type: none;
-        display: flex;
-        justify-content: space-evenly;
-        justify-items: center;
-        padding-top: 15px;
+body{
+    font-family: 'Ubuntu', sans-serif;
+    position: relative;
+    min-height: 100%;
+    padding-bottom: 70px;
+}
+
+nav{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    // justify-items: center;
+    // padding-top: 15px;
+    gap: 15px;
+
+    @media all and (max-width: 870px){
+        flex-wrap: wrap;
+    }
+
+    li{
+        background-color: rgb(211, 211, 211);
+        width: 220px;
+        height: 150px;
+        flex-shrink: 0;
+        border-radius: 5px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+
+        &:hover{
+            filter: drop-shadow(0 0 0.8rem rgb(20, 173, 220));
+            // background-color: rgb(255, 255, 255);
+        }
+        
+
+        &:nth-child(odd):hover::after{
+            top: 0;
+        }
+
+        &:nth-child(even):hover::after{
+            top: 0;
+        }
+
+        &:nth-child(odd)::after{
+            display: block;
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -100%;
+            height: 100%;
+            background-color: rgba(20, 173, 220, 0.8);
+            transition: top 500ms;
+            color: white;
+            pointer-events: none;
+            padding: 10px;
+        }        
+
+        &:nth-child(even)::after{
+            display: block;
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 100%;
+            height: 100%;
+            background-color: rgba(20, 173, 220, 0.8);
+            transition: top 500ms;
+            color: white;
+            pointer-events: none;
+            padding: 10px;
+        }
+
+        &:nth-child(1)::after{
+            content: "Click to add, update, search or delete members";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        &:nth-child(2)::after{
+            content: "Click to add, update, search or delete books";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        } 
+        
+        &:nth-child(3)::after{
+            content: "Click to issue books to members";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        } 
+        
+        &:nth-child(4)::after{
+            content: "Click to handle when books are returned";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        } 
     
-        @media all and (max-width: 870px){
+        a{
+            display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
-        }
-    
-        li{
-            background-color: rgb(173, 173, 173);
-            width: 220px;
-            height: 150px;
-    
-            border-radius: 10px;
-    
-    
-            cursor: pointer;
+            font-size: 1.3rem;
+            color: black;
+            height: 100%;
+            text-decoration: none;
+            justify-content: space-around;
 
             &:hover{
-                filter: drop-shadow(0 0 0.8rem rgb(20, 173, 220));
-                background-color: rgb(255, 255, 255);
+                color: rgba(20, 173, 220, 0.8);
             }
-            
-    
-            a{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                font-size: 1.3rem;
-                color: black;
-                height: 100%;
-                text-decoration: none;
-                justify-content: space-around;
-    
-                &:hover{
-                    color: rgb(20, 173, 220);
-                }
-    
-                ion-icon{
-                    font-size: 5rem;
-                    padding-top: 20px;
-                }
-    
-                div{
-                    padding: 15px;
-                }
+
+            ion-icon{
+                font-size: 5rem;
+                padding-top: 20px;
+            }
+
+            div{
+                padding: 15px;
             }
         }
     }
 }
 
+
 footer{
-    position: fixed;
+    position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
@@ -74,8 +150,8 @@ footer{
         text-decoration: none;
     }
 
-    @media all and (max-width: 870px){
-        margin-top: 10px;
-        position: relative;
-    }
+    // @media all and (max-width: 870px){
+    //     margin-top: 10px;
+    //     position: relative;
+    // }
 }
